Kata 1 Correccion
Se hace correcion en Kata 1 debido a que no se estaba guardando la lista nueva.